--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <properties>
         <!-- This is the path to the root [dspace-src] directory. -->
         <root.basedir>${basedir}/..</root.basedir>
+        <powermock.version>2.0.2</powermock.version>
     </properties>
 
     <!--
@@ -171,6 +172,18 @@
             <version>1.10</version>
             <scope>test</scope>
          </dependency>
+  <dependency>
+    <groupId>org.powermock</groupId>
+    <artifactId>powermock-module-junit4</artifactId>
+    <version>${powermock.version}</version>
+    <scope>test</scope>
+  </dependency>
+  <dependency>
+    <groupId>org.powermock</groupId>
+    <artifactId>powermock-api-mockito2</artifactId>
+    <version>${powermock.version}</version>
+    <scope>test</scope>
+  </dependency>
          <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
