Starting to fix the database (finally)

--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
       </profiles>
 
     <dependencies>
+<dependency>
+      <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+                  <version>1.4</version>
+                </dependency>
 <!-- DSpace core and endorsed Addons -->
          <dependency>
             <groupId>org.dspace</groupId>
