--- a/src/test/resources/dspace.cfg
+++ b/src/test/resources/dspace.cfg
@@ -1582,7 +1582,7 @@ sherpa.romeo.url = http://www.sherpa.ac.uk/romeo/api29.php
 
 # to disable the sherpa/romeo integration
 # uncomment the follow line 
-# webui.submission.sherparomeo-policy-enabled = false
+webui.submission.sherparomeo-policy-enabled = false
 
 # please register for a free api access key to get many benefits
 # http://www.sherpa.ac.uk/news/romeoapikeys.htm
