Separating unit and integration tests; Ensuring that the integration tests are passing for working with EPerson entities

--- a/src/test/resources/dspace/config/dspace.cfg
+++ b/src/test/resources/dspace/config/dspace.cfg
@@ -24,7 +24,7 @@
 ##### Basic information ######
 
 # DSpace installation directory
-dspace.dir = /dspace
+dspace.dir = ./target/test-classes/dspace
 
 # DSpace host name - should match base URL.  Do not include port number.
 dspace.hostname = localhost
@@ -51,7 +51,7 @@ default.language = en_US
 ##### Database settings #####
 
 # URL for connecting to database
-db.url = jdbc:postgresql://localhost:5432/dspace
+db.url = jdbc:postgresql://0.0.0.0:55432/dspace
 
 # JDBC Driver
 db.driver = org.postgresql.Driver
@@ -1582,7 +1582,7 @@ sherpa.romeo.url = http://www.sherpa.ac.uk/romeo/api29.php
 
 # to disable the sherpa/romeo integration
 # uncomment the follow line 
-# webui.submission.sherparomeo-policy-enabled = false
+webui.submission.sherparomeo-policy-enabled = false
 
 # please register for a free api access key to get many benefits
 # http://www.sherpa.ac.uk/news/romeoapikeys.htm
