Adding JaCoCo support for coverage analysis

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,8 @@ jobs:
       - run: mvn verify test
       - store_test_results:
           path: target/surefire-reports
+      - store_artifacts:
+          path: target/site/jacoco
 
 workflows:
   maven_test:
