--- a/pom.xml
+++ b/pom.xml
@@ -1,221 +1,443 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>edu.princeton.library.dspace</groupId>
-    <artifactId>dspace-example-module</artifactId>
-    <name>DSpace Example Module</name>
-    <version>5.3</version>
-    <description>An example module for DSpace.</description>
-
-    <properties>
-        <!-- This is the path to the root [dspace-src] directory. -->
-        <root.basedir>${basedir}/..</root.basedir>
-        <powermock.version>2.0.2</powermock.version>
-    </properties>
-
-    <!--
-       Runtime and Compile Time dependencies for DSpace.
-    -->
-    <build>
-        <resources>
-          <resource>
-            <directory>dspace/config</directory>
-            <includes>
-              <include>dspace/config/dspace.cfg</include>
-            </includes>
-          </resource>
-        </resources>
+  <modelVersion>
+    4.0.0
+  </modelVersion>
+  <groupId>
+    edu.princeton.library.dspace
+  </groupId>
+  <artifactId>
+    dspace-example-module
+  </artifactId>
+  <name>
+    DSpace Example Module
+  </name>
+  <version>
+    5.3
+  </version>
+  <description>
+    An example module for DSpace.
+  </description>
+  <properties>
+    <!-- This is the path to the root [dspace-src] directory. -->
+    <root.basedir>
+      ${basedir}/..
+    </root.basedir>
+    <powermock.version>
+      2.0.2
+    </powermock.version>
+  </properties>
+  <!-- Runtime and Compile Time dependencies for DSpace. -->
+  <build>
+    <resources>
+      <resource>
+        <directory>
+          dspace/config
+        </directory>
+        <includes>
+          <include>
+            dspace/config/dspace.cfg
+          </include>
+        </includes>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <groupId>
+          org.apache.maven.plugins
+        </groupId>
+        <artifactId>
+          maven-compiler-plugin
+        </artifactId>
+        <configuration>
+          <debug>
+            true
+          </debug>
+          <showDeprecation>
+            true
+          </showDeprecation>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>
+          org.apache.maven.plugins
+        </groupId>
+        <artifactId>
+          maven-jar-plugin
+        </artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addDefaultImplementationEntries>
+                true
+              </addDefaultImplementationEntries>
+              <addDefaultSpecificationEntries>
+                true
+              </addDefaultSpecificationEntries>
+            </manifest>
+          </archive>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>
+                test-jar
+              </goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>
+          org.codehaus.mojo
+        </groupId>
+        <artifactId>
+          build-helper-maven-plugin
+        </artifactId>
+        <version>
+          1.9
+        </version>
+        <executions>
+          <execution>
+            <phase>
+              validate
+            </phase>
+            <goals>
+              <goal>
+                maven-version
+              </goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>
+          org.jacoco
+        </groupId>
+        <artifactId>
+          jacoco-maven-plugin
+        </artifactId>
+        <version>
+          0.8.5
+        </version>
+        <executions>
+          <execution>
+            <id>
+              default-prepare-agent
+            </id>
+            <goals>
+              <goal>
+                prepare-agent
+              </goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>
+              default-report
+            </id>
+            <goals>
+              <goal>
+                report
+              </goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>
+              default-check
+            </id>
+            <goals>
+              <goal>
+                check
+              </goal>
+            </goals>
+            <configuration>
+              <rules>
+                <rule>
+                  <element>
+                    BUNDLE
+                  </element>
+                  <limits>
+                    <limit>
+                      <counter>
+                        COMPLEXITY
+                      </counter>
+                      <value>
+                        COVEREDRATIO
+                      </value>
+                      <minimum>
+                        0.75
+                      </minimum>
+                    </limit>
+                  </limits>
+                </rule>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+  <profiles>
+    <profile>
+      <id>
+        findbugs
+      </id>
+      <activation>
+        <activeByDefault>
+          false
+        </activeByDefault>
+        <!--
+        property>
+        <name>maven.test.skip</name>
+        <value>false</value>
+        </property
+        -->
+      </activation>
+      <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <debug>true</debug>
-                    <showDeprecation>true</showDeprecation>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-                        </manifest>
-                    </archive>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.9</version>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>maven-version</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
+          <plugin>
+            <groupId>
+              org.codehaus.mojo
+            </groupId>
+            <artifactId>
+              findbugs-maven-plugin
+            </artifactId>
+          </plugin>
         </plugins>
-    </build>
-
-    <profiles>
-        <profile>
-            <id>findbugs</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <!-- property>
-                    <name>maven.test.skip</name>
-                    <value>false</value>
-                </property -->
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>findbugs-maven-plugin</artifactId>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <!-- If Unit Testing is enabled, then setup the Unit Test Environment.
-             See also the 'skiptests' profile in Parent POM. -->
-        <profile>
-            <id>test-environment</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <property>
-                    <name>maven.test.skip</name>
-                    <value>false</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <!-- Run Unit/Integration Testing! This plugin just kicks off the tests (when enabled). -->
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <systemPropertyVariables>
-                                <!-- Specify the dspace.cfg file to use for test environment -->
-                              <dspace.configuration>${project.basedir}/src/test/resources/dspace/config/dspace.cfg</dspace.configuration>
-                                <!-- Turn off any DSpace logging -->
-                                <dspace.log.init.disable>true</dspace.log.init.disable>
-                            </systemPropertyVariables>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-<!-- Determine path to Java Tools JAR. This JAR contains the 'native2ascii' tool (required above by maven-antrun-plugin)-->
-        <!-- In most platforms Unix/Windows it's named tools.jar. But, on Mac it's classes.jar (see next profile) -->
-        <profile>
-          <id>default-java-tools</id>
-          <activation>
-            <activeByDefault>true</activeByDefault>
-            <file>
-                <exists>${java.home}/../lib/tools.jar</exists>
-            </file>
-          </activation>
-          <properties>
-            <toolsjar>${java.home}/../lib/tools.jar</toolsjar>
-          </properties>
-        </profile>
-        <profile>
-          <id>mac-java-tools</id>
-          <activation>
-            <activeByDefault>false</activeByDefault>
-            <file>
-                <exists>${java.home}/../Classes/classes.jar</exists>
-            </file>
-          </activation>
-          <properties>
-            <toolsjar>${java.home}/../Classes/classes.jar</toolsjar>
-          </properties>
-        </profile>
-      </profiles>
-
-    <dependencies>
-<dependency>
-      <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
-                  <version>1.4</version>
-                </dependency>
-<!-- DSpace core and endorsed Addons -->
-         <dependency>
-            <groupId>org.dspace</groupId>
-            <artifactId>dspace-api</artifactId>
-            <version>5.3</version>
-         </dependency>
-         <dependency>
-            <groupId>org.dspace.modules</groupId>
-            <artifactId>additions</artifactId>
-            <version>5.3</version>
-         </dependency>
-
-
-<dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-         </dependency>
-
-<!-- JMockit, JUnit and Hamcrest are used for Unit/Integration tests -->
-         <dependency> <!-- Keep jmockit before junit -->
-            <groupId>org.jmockit</groupId>
-            <artifactId>jmockit</artifactId>
-            <version>1.10</version>
-            <scope>test</scope>
-         </dependency>
-  <dependency>
-    <groupId>org.powermock</groupId>
-    <artifactId>powermock-module-junit4</artifactId>
-    <version>${powermock.version}</version>
-    <scope>test</scope>
-  </dependency>
-  <dependency>
-    <groupId>org.powermock</groupId>
-    <artifactId>powermock-api-mockito2</artifactId>
-    <version>${powermock.version}</version>
-    <scope>test</scope>
-  </dependency>
-         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-         </dependency>
-         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-core</artifactId>
-            <version>1.3</version>
-            <scope>test</scope>
-         </dependency>
-
-<!-- Findbugs annotations -->
-          <dependency>
-              <groupId>com.google.code.findbugs</groupId>
-              <artifactId>jsr305</artifactId>
-              <version>3.0.0</version>
-              <scope>provided</scope>
-          </dependency>
-          <dependency>
-              <groupId>com.google.code.findbugs</groupId>
-              <artifactId>annotations</artifactId>
-              <version>3.0.0</version>
-              <scope>provided</scope>
-          </dependency>
-
-       </dependencies>
-
+      </build>
+    </profile>
+    <!--
+    If Unit Testing is enabled, then setup the Unit Test Environment.
+    See also the 'skiptests' profile in Parent POM.
+    -->
+    <profile>
+      <id>
+        test-environment
+      </id>
+      <activation>
+        <activeByDefault>
+          false
+        </activeByDefault>
+        <property>
+          <name>
+            maven.test.skip
+          </name>
+          <value>
+            false
+          </value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <!-- Run Unit/Integration Testing! This plugin just kicks off the tests (when enabled). -->
+          <plugin>
+            <artifactId>
+              maven-surefire-plugin
+            </artifactId>
+            <configuration>
+              <systemPropertyVariables>
+                <!-- Specify the dspace.cfg file to use for test environment -->
+                <dspace.configuration>
+                  ${project.basedir}/src/test/resources/dspace/config/dspace.cfg
+                </dspace.configuration>
+                <!-- Turn off any DSpace logging -->
+                <dspace.log.init.disable>
+                  true
+                </dspace.log.init.disable>
+              </systemPropertyVariables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <!-- Determine path to Java Tools JAR. This JAR contains the 'native2ascii' tool (required above by maven-antrun-plugin) -->
+    <!-- In most platforms Unix/Windows it's named tools.jar. But, on Mac it's classes.jar (see next profile) -->
+    <profile>
+      <id>
+        default-java-tools
+      </id>
+      <activation>
+        <activeByDefault>
+          true
+        </activeByDefault>
+        <file>
+          <exists>
+            ${java.home}/../lib/tools.jar
+          </exists>
+        </file>
+      </activation>
+      <properties>
+        <toolsjar>
+          ${java.home}/../lib/tools.jar
+        </toolsjar>
+      </properties>
+    </profile>
+    <profile>
+      <id>
+        mac-java-tools
+      </id>
+      <activation>
+        <activeByDefault>
+          false
+        </activeByDefault>
+        <file>
+          <exists>
+            ${java.home}/../Classes/classes.jar
+          </exists>
+        </file>
+      </activation>
+      <properties>
+        <toolsjar>
+          ${java.home}/../Classes/classes.jar
+        </toolsjar>
+      </properties>
+    </profile>
+  </profiles>
+  <dependencies>
+    <dependency>
+      <groupId>
+        commons-dbcp
+      </groupId>
+      <artifactId>
+        commons-dbcp
+      </artifactId>
+      <version>
+        1.4
+      </version>
+    </dependency>
+    <!-- DSpace core and endorsed Addons -->
+    <dependency>
+      <groupId>
+        org.dspace
+      </groupId>
+      <artifactId>
+        dspace-api
+      </artifactId>
+      <version>
+        5.3
+      </version>
+    </dependency>
+    <dependency>
+      <groupId>
+        org.dspace.modules
+      </groupId>
+      <artifactId>
+        additions
+      </artifactId>
+      <version>
+        5.3
+      </version>
+    </dependency>
+    <dependency>
+      <groupId>
+        log4j
+      </groupId>
+      <artifactId>
+        log4j
+      </artifactId>
+      <version>
+        1.2.17
+      </version>
+    </dependency>
+    <!-- JMockit, JUnit and Hamcrest are used for Unit/Integration tests -->
+    <dependency>
+      <!-- Keep jmockit before junit -->
+      <groupId>
+        org.jmockit
+      </groupId>
+      <artifactId>
+        jmockit
+      </artifactId>
+      <version>
+        1.10
+      </version>
+      <scope>
+        test
+      </scope>
+    </dependency>
+    <dependency>
+      <groupId>
+        org.powermock
+      </groupId>
+      <artifactId>
+        powermock-module-junit4
+      </artifactId>
+      <version>
+        ${powermock.version}
+      </version>
+      <scope>
+        test
+      </scope>
+    </dependency>
+    <dependency>
+      <groupId>
+        org.powermock
+      </groupId>
+      <artifactId>
+        powermock-api-mockito2
+      </artifactId>
+      <version>
+        ${powermock.version}
+      </version>
+      <scope>
+        test
+      </scope>
+    </dependency>
+    <dependency>
+      <groupId>
+        junit
+      </groupId>
+      <artifactId>
+        junit
+      </artifactId>
+      <version>
+        4.11
+      </version>
+      <scope>
+        test
+      </scope>
+    </dependency>
+    <dependency>
+      <groupId>
+        org.hamcrest
+      </groupId>
+      <artifactId>
+        hamcrest-core
+      </artifactId>
+      <version>
+        1.3
+      </version>
+      <scope>
+        test
+      </scope>
+    </dependency>
+    <!-- Findbugs annotations -->
+    <dependency>
+      <groupId>
+        com.google.code.findbugs
+      </groupId>
+      <artifactId>
+        jsr305
+      </artifactId>
+      <version>
+        3.0.0
+      </version>
+      <scope>
+        provided
+      </scope>
+    </dependency>
+    <dependency>
+      <groupId>
+        com.google.code.findbugs
+      </groupId>
+      <artifactId>
+        annotations
+      </artifactId>
+      <version>
+        3.0.0
+      </version>
+      <scope>
+        provided
+      </scope>
+    </dependency>
+  </dependencies>
 </project>
