--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,19 @@
         <version>3.2.3</version>
       </plugin>
 
+      <plugin>
+        <groupId>com.coveo</groupId>
+        <artifactId>fmt-maven-plugin</artifactId>
+        <version>2.9</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>format</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
       <!-- Disabled from the parent POM -->
       <plugin>
         <groupId>com.mycila</groupId>
